<resources>
    <string name="app_name">Smash Bros</string>

    <string name="walkthrough_label_1">Access our\n Extended Catalog</string>
    <string name="walkthrough_label_2">Filter Fighters</string>
    <string name="walkthrough_label_3">And More…</string>

    <string name="fighters">Fighters</string>

    <string name="filters">Filters</string>
    <string name="filters_sort_by">Sort by</string>
    <string name="filters_name">Name</string>
    <string name="filters_price">Price</string>
    <string name="filters_rate">Rate</string>
    <string name="filters_downloads">Downloads</string>
    <string name="filters_filter_by">Filter by</string>
    <string name="filters_reset">Reset</string>
    <string name="filters_apply">Apply</string>

    <string name="fighters_adapter_price">Price: $%1$s</string>
    <string name="fighters_adapter_rate">Rate: %1$d</string>
    <string name="fighters_adapter_downloads">Downloads: %1$s</string>

    <string name="filters_menu">Filters</string>

    <string name="key_opened_before">opened_before</string>
    <string name="key_current_universe">current_universe</string>
    <string name="key_sort_by">sort_by</string>
    <string name="key_filter_by">filter_by</string>
</resources>